--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
+#root {
+  padding: 40px;
+}
+
+.header h1 {
+  color: white;
+  font-size: 4em;
   text-align: center;
+  margin: 0 0 12px 0;
+}
+.header__days {
+  text-transform: uppercase;
+  text-align: center;
+  color: #5887ff;
+  font-size: 1.4em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.filter {
   display: flex;
-  flex-direction: column;
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 412px;
+  justify-content: space-between;
+  /*********** Baseline, reset styles ***********/
+  /* Removes default focus */
+  /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+  /* slider track */
+  /* slider thumb */
+  /*********** Firefox styles ***********/
+  /* slider track */
+  /* slider thumb */
+}
+.filter__p {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.filter__p > span {
+  display: block;
+}
+.filter__label {
+  text-transform: uppercase;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.filter__value {
+  color: #5887ff;
+  font-weight: 700;
+  font-size: 1.6em;
+}
+.filter__range-container {
+  background-color: rgba(255, 255, 255, 0.4);
+  height: 30px;
+  width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 110px;
+}
+.filter input[type=range] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background: transparent;
+  cursor: pointer;
+  width: 140px;
+}
+.filter input[type=range]:focus {
+  outline: none;
+}
+.filter input[type=range]::-webkit-slider-runnable-track {
+  background-color: #dbe5ff;
+  border-radius: 0px;
+  height: 2px;
+  overflow: unset;
+}
+.filter input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  margin-top: -7px; /* Centers thumb on the track */
+  background-color: #5887ff;
+  border-radius: 8px;
+  height: 16px;
+  width: 16px;
+}
+.filter input[type=range]:focus::-webkit-slider-thumb {
+  outline: 3px solid #5887ff;
+  outline-offset: 0.1px;
+}
+.filter input[type=range]::-moz-range-track {
+  background-color: #dbe5ff;
+  border-radius: 0px;
+  height: 2px;
+}
+.filter input[type=range]::-moz-range-thumb {
+  background-color: #5887ff;
+  border: none; /*Removes extra border that FF applies*/
+  border-radius: 8px;
+  height: 16px;
+  width: 16px;
+}
+.filter input[type=range]:focus::-moz-range-thumb {
+  outline: 3px solid #5887ff;
+  outline-offset: 0.1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-display__card {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 20px;
 }
