--- a/src/App.css
+++ b/src/App.css
@@ -74,9 +74,9 @@
   overflow: unset;
 }
 .filter input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
+  -webkit-appearance: none;
   appearance: none;
-  margin-top: -7px; /* Centers thumb on the track */
+  margin-top: -7px;
   background-color: #5887ff;
   border-radius: 8px;
   height: 16px;
@@ -93,7 +93,7 @@
 }
 .filter input[type=range]::-moz-range-thumb {
   background-color: #5887ff;
-  border: none; /*Removes extra border that FF applies*/
+  border: none;
   border-radius: 8px;
   height: 16px;
   width: 16px;
