--- a/src/App.scss
+++ b/src/App.scss
@@ -84,9 +84,9 @@ $light-gray: #ffffff66;
 
     /* slider thumb */
     input[type='range']::-webkit-slider-thumb {
-        -webkit-appearance: none; /* Override default look */
+        -webkit-appearance: none; 
         appearance: none;
-        margin-top: -7px; /* Centers thumb on the track */
+        margin-top: -7px; 
         background-color: #5887ff;
         border-radius: 8px;
         height: 16px;
@@ -109,7 +109,7 @@ $light-gray: #ffffff66;
     /* slider thumb */
     input[type='range']::-moz-range-thumb {
         background-color: #5887ff;
-        border: none; /*Removes extra border that FF applies*/
+        border: none; 
         border-radius: 8px;
         height: 16px;
         width: 16px;
