--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,22 @@
   padding: 40px;
 }
 
+.temp {
+  color: #5887ff;
+  font-weight: 700;
+  font-size: 1.6em;
+}
+
 .header h1 {
   color: white;
   font-size: 4em;
   text-align: center;
   margin: 0 0 12px 0;
+}
+.header__error {
+  background-color: rgba(255, 255, 255, 0.4);
+  padding: 1em;
+  border-radius: 0.5em;
 }
 .header__days {
   text-transform: uppercase;
@@ -41,11 +52,6 @@
 .filter__label {
   text-transform: uppercase;
   color: white;
-}
-.filter__value {
-  color: #5887ff;
-  font-weight: 700;
-  font-size: 1.6em;
 }
 .filter__range-container {
   background-color: rgba(255, 255, 255, 0.4);
@@ -103,7 +109,60 @@
   outline-offset: 0.1px;
 }
 
+.weather-display {
+  margin-top: 2.5em;
+}
 .weather-display__card {
   background-color: rgba(255, 255, 255, 0.4);
-  border-radius: 20px;
+  height: 74px;
+  border-radius: 2em;
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: space-between;
+  padding: 2em 2em 2em 1.5em;
+  align-items: center;
+}
+.weather-display__icon-date {
+  display: flex;
+  align-items: center;
+}
+.weather-display__icon {
+  margin-right: 1em;
+}
+.weather-display__date > p {
+  display: flex;
+  flex-direction: column;
+  text-transform: lowercase;
+  font-size: 1.6em;
+  font-weight: 700;
+}
+.weather-display__number {
+  font-size: 30px;
+}
+.weather-display__temp-container {
+  text-transform: uppercase;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+.weather-display__temp {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.average-temp {
+  font-weight: 700;
+  font-size: 13px;
+  margin-top: 2.5em;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  color: white;
+  margin-top: 25px;
 }
