--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -13,7 +13,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
     display: flex;
     justify-content: center;
-    min-height: 100vw;
+    width: 100vw;
+    height: 100vh;
     background: linear-gradient(0.38turn, #dbe5ff, #91affb, #e3ebff) no-repeat;
     font-weight: 500;
     font-size: 10px;
@@ -26,8 +27,17 @@ code {
 }
 
 #root {
-    padding: 40px;
     font-family: 'Inter', sans-serif;
+    overflow: auto;
+    width: 100%;
+}
+
+#App {
+    padding: 40px;
+}
+main {
+    max-width: 412px;
+    margin: 0 auto;
 }
 
 .temp {
@@ -87,7 +97,7 @@ code {
         align-items: center;
         border-radius: 110px;
     }
-
+    // -- input range style
     /*********** Baseline, reset styles ***********/
     input[type='range'] {
         -webkit-appearance: none;
@@ -152,6 +162,22 @@ code {
 
 .weather-display {
     margin-top: 2.5em;
+
+    .weather-card {
+        animation: fadeInDown 0.8s ease-out;
+    }
+
+    @keyframes fadeInDown {
+        0% {
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
     &__card {
         background-color: $light-gray;
         height: 74px;
@@ -218,5 +244,31 @@ code {
     }
     .gray {
         color: $light-gray;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    body {
+        font-size: 8px;
+    }
+
+    .filter {
+        width: unset;
+        flex-direction: column;
+        &__container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        &__p {
+            justify-content: unset;
+        }
+        &__value {
+            margin: 0 1em;
+        }
+    }
+    .weather-display__temp-container {
+        margin-left: 1em;
     }
 }
