--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -213,10 +213,11 @@ main {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 16px;
-  color: #323232;
+  color: white;
 }
 .nav .gray {
   color: rgba(255, 255, 255, 0.4);
+  cursor: auto;
 }
 
 @media screen and (max-width: 520px) {
