--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -35,6 +35,7 @@ code {
 #App {
     padding: 40px;
 }
+
 main {
     max-width: 412px;
     margin: 0 auto;
@@ -240,10 +241,11 @@ main {
         text-transform: uppercase;
         font-weight: 700;
         font-size: 16px;
-        color: $dark-gray;
+        color: $white;
     }
     .gray {
         color: $light-gray;
+        cursor: auto;
     }
 }
 
